package com.dancr.platform.network.execution

import com.dancr.platform.network.client.RawResponse
import com.dancr.platform.network.result.Diagnostic
import com.dancr.platform.network.result.NetworkError

open class DefaultErrorClassifier : ErrorClassifier {

    override fun classify(response: RawResponse?, cause: Throwable?): NetworkError {
        if (cause != null) return classifyThrowable(cause)
        if (response != null) return classifyResponse(response)
        return NetworkError.Unknown()
    }

    // Cross-platform heuristic: in commonMain we cannot import platform exception types.
    // This uses exception class name patterns as a reasonable default.
    // Override in platform-specific subclasses for type-safe matching.
    protected open fun classifyThrowable(cause: Throwable): NetworkError {
        val diagnostic = Diagnostic(
            description = cause.message ?: "Unknown error",
            cause = cause
        )

        val name = cause::class.simpleName.orEmpty()
        return when {
            name.contains("Timeout", ignoreCase = true) ->
                NetworkError.Timeout(diagnostic)

            name.contains("UnknownHost", ignoreCase = true) ||
                name.contains("ConnectException", ignoreCase = true) ||
                name.contains("NoRouteToHost", ignoreCase = true) ->
                NetworkError.Connectivity(diagnostic)

            name.contains("Serializ", ignoreCase = true) ||
                name.contains("JsonException", ignoreCase = true) ||
                name.contains("ParseException", ignoreCase = true) ->
                NetworkError.Serialization(diagnostic)

            else -> NetworkError.Unknown(diagnostic)
        }
    }

    protected open fun classifyResponse(response: RawResponse): NetworkError {
        val diagnostic = Diagnostic(
            description = "HTTP ${response.statusCode}",
            metadata = mapOf("statusCode" to response.statusCode.toString())
        )

        return when (response.statusCode) {
            401 -> NetworkError.Authentication(diagnostic)
            403 -> NetworkError.Authorization(diagnostic)
            in 400..499 -> NetworkError.ClientError(response.statusCode, diagnostic)
            in 500..599 -> NetworkError.ServerError(response.statusCode, diagnostic)
            else -> NetworkError.Unknown(diagnostic)
        }
    }
}
