classDiagram
    direction LR

    namespace Executor {
        class SafeRequestExecutor {
            <<interface>>
            +execute(request, context?, deserialize) NetworkResult~T~
        }

        class DefaultSafeRequestExecutor {
            -engine: HttpEngine
            -config: NetworkConfig
            -validator: ResponseValidator
            -classifier: ErrorClassifier
            -interceptors: List~RequestInterceptor~
            -responseInterceptors: List~ResponseInterceptor~
            -observers: List~NetworkEventObserver~
            +execute(request, context?, deserialize) NetworkResult~T~
        }
    }

    namespace Transport {
        class HttpEngine {
            <<interface>>
            +execute(request) RawResponse
            +close()
            +healthCheck() Boolean
        }

        class KtorHttpEngine {
            -client: HttpClient
            +execute(request) RawResponse
            +close()
            +create(config, trustPolicy?)$ KtorHttpEngine
        }
    }

    namespace Interceptors {
        class RequestInterceptor {
            <<fun interface>>
            +intercept(request, context?) HttpRequest
        }

        class ResponseInterceptor {
            <<fun interface>>
            +intercept(response, request, context?) RawResponse
        }
    }

    namespace Validation {
        class ErrorClassifier {
            <<interface>>
            +classify(response?, cause?) NetworkError
        }

        class DefaultErrorClassifier {
            <<open>>
            +classify(response?, cause?) NetworkError
            #classifyThrowable(cause) NetworkError
            #classifyResponse(response) NetworkError
        }

        class KtorErrorClassifier {
            #classifyThrowable(cause) NetworkError
        }

        class ResponseValidator {
            <<interface>>
            +validate(response) ValidationOutcome
        }

        class DefaultResponseValidator {
            +validate(response) ValidationOutcome
        }
    }

    namespace Observability {
        class NetworkEventObserver {
            <<interface>>
            +onRequestStarted(request, context?)
            +onResponseReceived(request, response, durationMs, context?)
            +onRetryScheduled(request, attempt, max, error, delayMs)
            +onRequestFailed(request, error, durationMs, context?)
        }
    }

    SafeRequestExecutor <|.. DefaultSafeRequestExecutor
    HttpEngine <|.. KtorHttpEngine
    ErrorClassifier <|.. DefaultErrorClassifier
    DefaultErrorClassifier <|-- KtorErrorClassifier
    ResponseValidator <|.. DefaultResponseValidator

    DefaultSafeRequestExecutor --> HttpEngine : uses
    DefaultSafeRequestExecutor --> ErrorClassifier : uses
    DefaultSafeRequestExecutor --> ResponseValidator : uses
    DefaultSafeRequestExecutor --> RequestInterceptor : chains
    DefaultSafeRequestExecutor --> ResponseInterceptor : chains
    DefaultSafeRequestExecutor --> NetworkEventObserver : notifies
